# CANTech

./: .gitignore  README.md
src/: CMakeLists.txt  main.c
src/bus/: can_bus.c
src/includes/: can_bus.h  can_bus_ui.h  can_node.h  can_tech_ui.h  message.h
src/node/: can_node.c
src/script/: install.sh
src/ui/: can_bus_ui.c  can_tech_ui.c
